--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.26.3",
+    "@emotion/babel-plugin": "^11.13.5",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
@@ -47,6 +49,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "prisma": "^6.5.0",
     "tailwindcss": "^4",
+    "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
