--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,10 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "baseUrl": ".",
   },
   "types": ["jest", "node"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "jest.config.js", "jest.setup.js"],
   "exclude": ["node_modules"]
 }
