--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "sonar": "sonar-scanner -Dsonar.scanner.disableCloud=true"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
