--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,3 +8,10 @@ sonar.projectKey=auth-next
 sonar.projectName=auth-next
 sonar.sources=app
 sonar.exclusions=node_modules/**,dist/**
+
+# Mandatory for coverage
+
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.sources=app,components,pages  # Match your project
+sonar.exclusions=**/node_modules/**,**/.next/**
