sonarqube coverage imporved

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,12 +6,10 @@ sonar.login=sqa_e531afa5b9a9c8d724534914283c112a1db330c7
 # Project settings
 sonar.projectKey=auth-next
 sonar.projectName=auth-next
-sonar.sources=app
-sonar.exclusions=node_modules/**,dist/**
+sonar.sources=app,
+sonar.tests=__tests__
+sonar.exclusions=**/node_modules/**,**/.next/**,dist/**
 
 # Mandatory for coverage
-
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
-sonar.sources=app,components,pages  # Match your project
-sonar.exclusions=**/node_modules/**,**/.next/**
