--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "postinstall": "prisma generate",
     "sonar": "npm run test:coverage && sonarqube-scanner",
     "lint": "eslint app --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0",
-    "lint-fix": "eslint app --ext js,jsx,ts,tsx --fix",
-    "format": "prettier --write 'app/**/*.{js,jsx,ts,tsx,css,html}'"
+    "lint:fix": "eslint app --ext js,jsx,ts,tsx --fix",
+    "format": "prettier --write 'app/**/*.{js,jsx,ts,tsx,css,html}'",
+    "prepare": "husky"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
@@ -24,7 +25,6 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "eslint-plugin-prettier": "^5.2.5",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "next-auth": "^5.0.0-beta.25",
@@ -41,6 +41,8 @@
     "@babel/plugin-transform-modules-commonjs": "^7.26.3",
     "@emotion/babel-plugin": "^11.13.5",
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.23.0",
+    "@next/eslint-plugin-next": "^15.2.4",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -49,9 +51,13 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "eslint": "^9.23.0",
     "eslint-config-next": "15.2.3",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.5",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -70,7 +76,8 @@
     }
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": "eslint --fix",
-    "**/*.{js,jsx,ts,tsx,css,scss,md}": "prettier --write"
+    "*.{js,jsx,ts,tsx,json,css,md}": [
+      "prettier --write --ignore-unknown"
+    ]
   }
 }
