--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.26.3",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@emotion/babel-plugin": "^11.13.5",
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.23.0",
