--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint": "eslint app --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint app --ext js,jsx,ts,tsx --fix",
     "format": "prettier --write 'app/**/*.{js,jsx,ts,tsx,css,html}'",
-    "prepare": "husky"
+    "prepare": "husky",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
@@ -39,12 +41,21 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.26.3",
+    "@chromatic-com/storybook": "^3.2.6",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@emotion/babel-plugin": "^11.13.5",
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.23.0",
     "@next/eslint-plugin-next": "^15.2.4",
+    "@storybook/addon-essentials": "^8.6.10",
+    "@storybook/addon-onboarding": "^8.6.10",
+    "@storybook/blocks": "^8.6.10",
+    "@storybook/experimental-addon-test": "^8.6.10",
+    "@storybook/experimental-nextjs-vite": "^8.6.10",
+    "@storybook/nextjs": "^8.6.10",
+    "@storybook/react": "^8.6.10",
+    "@storybook/test": "^8.6.10",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -55,21 +66,27 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
+    "@vitest/browser": "^3.0.9",
+    "@vitest/coverage-v8": "^3.0.9",
     "eslint": "^9.23.0",
     "eslint-config-next": "15.2.3",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
+    "eslint-plugin-storybook": "^0.12.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.0",
+    "playwright": "^1.51.1",
     "prettier": "^3.5.3",
     "prisma": "^6.5.0",
+    "storybook": "^8.6.10",
     "tailwindcss": "^4",
     "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.0.9"
   },
   "husky": {
     "hooks": {
@@ -84,6 +101,11 @@
     ],
     "*.{css,scss,md,json}": [
       "prettier --write"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
     ]
   }
 }
